// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main Build behaior Allow leads to building from source with a message in the debug logs 1`] = `
[
  [
    "CPython version 3.6.x is not supported by actions/setup-python.",
  ],
  [
    "Copying built folder into tool cache.",
  ],
  [
    "CPython 3.6.15 for arch x64 successfully installed.",
  ],
]
`;

exports[`main Build behaior Allow leads to building from source with a message in the debug logs 2`] = `
[
  [
    "Builder cache key: CPython3.6.15x64os",
  ],
  [
    "Builder path: CPython3.6.15x64os",
  ],
  [
    "Parsing inputs...",
  ],
  [
    "Inputs successfully parsed.",
  ],
  [
    "Requested python version: cpython 3.6.x",
  ],
  [
    "Requested architecture: x64",
  ],
  [
    "Requested build cache: false",
  ],
  [
    "Requested behavior for deprecated builds: allow",
  ],
  [
    "Resolving setup-python version...",
  ],
  [
    "setup-python version resolved.",
  ],
  [
    "CPython version 3.6.x will be built from source.",
  ],
  [
    "Creating builder...",
  ],
  [
    "Builder created...",
  ],
  [
    "Beginning build process...",
  ],
  [
    "Build complete.",
  ],
  [
    "Performing post-install operations...",
  ],
  [
    "Post-install operations done",
  ],
  [
    "Initializing pip...",
  ],
  [
    "Pip initialized",
  ],
]
`;

exports[`main Build behaior Error leads to a failed action with an error message 1`] = `
[
  [
    "CPython version 3.6.x is not supported by actions/setup-python.
          If you wish for this action to build CPython 3.6.x from source set input "allow-build" to
          either "warn", "info" or "allow".",
  ],
]
`;

exports[`main Build behaior Info leads to building from source with a message in the logs 1`] = `
[
  [
    "CPython version 3.6.x is not supported by actions/setup-python.",
  ],
  [
    "CPython version 3.6.x will be built from source.",
  ],
  [
    "Copying built folder into tool cache.",
  ],
  [
    "CPython 3.6.15 for arch x64 successfully installed.",
  ],
]
`;

exports[`main Build behaior Info leads to building from source with a message in the logs 2`] = `
[
  [
    "Builder cache key: CPython3.6.15x64os",
  ],
  [
    "Builder path: CPython3.6.15x64os",
  ],
  [
    "Parsing inputs...",
  ],
  [
    "Inputs successfully parsed.",
  ],
  [
    "Requested python version: cpython 3.6.x",
  ],
  [
    "Requested architecture: x64",
  ],
  [
    "Requested build cache: false",
  ],
  [
    "Requested behavior for deprecated builds: info",
  ],
  [
    "Resolving setup-python version...",
  ],
  [
    "setup-python version resolved.",
  ],
  [
    "Creating builder...",
  ],
  [
    "Builder created...",
  ],
  [
    "Beginning build process...",
  ],
  [
    "Build complete.",
  ],
  [
    "Performing post-install operations...",
  ],
  [
    "Post-install operations done",
  ],
  [
    "Initializing pip...",
  ],
  [
    "Pip initialized",
  ],
]
`;

exports[`main Build behaior Warn leads to building from source with a warning 1`] = `
[
  [
    "CPython version 3.6.x is not supported by actions/setup-python.
          This probably means you are using a deprecated version. If this is not the case, you may suppress the warning setting input "allow-build"
          to either "info" or "allow".",
  ],
]
`;

exports[`main Builder handles failure in build 1`] = `
[
  [
    "Error while building Python.
Failure in build",
  ],
]
`;

exports[`main Builder handles failure in initPip 1`] = `
[
  [
    "Error during pip initialization.
Failure in initPip",
  ],
]
`;

exports[`main Builder handles failure in postInstall 1`] = `
[
  [
    "Error during post-install operations.
Failure in postInstall",
  ],
]
`;

exports[`main Builder handles failure in restoreCache 1`] = `
[
  [
    "Error while restoring cache.
Failure in restoreCache",
  ],
]
`;

exports[`main Builder handles failure in saveCache 1`] = `
[
  [
    "Error while saving cache.
Failure in saveCache",
  ],
]
`;

exports[`main actions/setup-python result PyPy failure 1`] = `
[
  [
    "This action does not support building PyPy from source",
  ],
]
`;

exports[`main actions/setup-python result handles a failure in version.getSetupPythonResult with CPython 1`] = `
[
  [
    "Error while resolving setup-python version.
fail actions/setup-python",
  ],
]
`;

exports[`main actions/setup-python result handles a failure in version.getSetupPythonResult with PyPy 1`] = `
[
  [
    "Error while resolving setup-python version.
fail actions/setup-python",
  ],
]
`;

exports[`main builder.getBuilder handles builder.getBuilder returning null 1`] = `
[
  [
    "CPython version 3.6.x cannot be built from source.",
  ],
]
`;

exports[`main input parsing handles a failure in inputs.parseInputs 1`] = `
[
  [
    "Error while parsing inputs.
fail input parsing",
  ],
]
`;
